--- a/Home.html
+++ b/Home.html
@@ -19,7 +19,7 @@
     </header>
     <main>
         <div class="main-content">
-            <h1>Hi, I am Jasmine</h1>
+            <h1>Hi, I am Jasmine Norphimai Ward</h1>
             <p id="welcome-text">Welcome to my digital CV!</p>
             <img src="img/profilepic.jpg" alt="Picture of Jasmine" id="profileimg">
         </div>
